<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.LoginFragment">

    <data>
        <variable
            name="loginFragment"
            type="com.example.shoestore.view.LoginFragment" />
        <variable
            name="viewModel"
            type="com.example.shoestore.model.ShoeStoreViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/loginTitle"
                style="@style/titleStyle"
                android:text="@string/loginTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle">

                <AutoCompleteTextView
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/nameHint"
                    android:inputType="text"
                    android:paddingStart="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passInputLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInputLabel">

                <AutoCompleteTextView
                    android:id="@+id/passInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/passHint"
                    android:inputType="textPassword"
                    android:paddingStart="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:onClick="@{() -> loginFragment.goToWelcomeFragment()}"
                android:text="@string/btnSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passInputLabel" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto"
                android:onClick="@{() -> loginFragment.goToWelcomeFragment()}"
                android:text="@string/btnSignUp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
